--- a/client/src/components/MessageList/MessageList.css
+++ b/client/src/components/MessageList/MessageList.css
@@ -5,6 +5,8 @@
   padding: 10px 20px;
   height: max-content;
   font-size: 20px;
+  max-width: 45%;
+  word-wrap: break-word;
 }
 
 #you.message {
